ecmascript/parser/tests/test262-error-references/fail/b1f1e599a3dcf9c5.js.stderr
error: Expected RBracket
 --> $DIR/tests/test262-parser/fail/b1f1e599a3dcf9c5.js:1:10
  |
1 | let [...a,] = 0
  |          ^

